# octopus_ai

./: .bazelrc  .gitignore  ARCHITECTURE.md  AgentGenerator.py  BODY_ROTATION_PLAN.md  BUILD  CLAUDE.md  CLI_GUIDELINES_SUMMARY.md  EXPLORATION_PLAN.md  ILQR_PERF.md  MIGRATION_PLAN.md  MODULE.bazel  MOTOR_SESSION_2026-07-17.md  Makefile  OctoConfig.py  OctoDatagen.py  Octopus.py  README.md  RECORD_REPLAY_PLAN.md  TRAINING.md  bazel-bin  bazel-octopus_ai  bazel-out  bazel-testlogs  config_schema.py  git_commit_rename.py  losses.py  makefile  octo.py  octo_datagen.py  octo_model.py  octo_viz.py  octopus-ai-visualizer.tsx  octopus-visualizer.html  pyproject.toml  run_tests.py  test.sh  training.py  util.py  websocket-integration.py  (+1 more)
datagen/: sucker_data.pkl
docs/media/: README.md
inference_server/: BUILD  model_inference.py  server.py  test_server.py
logs/: events.out.tfevents.1703609344.MacBook-Pro.local.62937.0.v2  events.out.tfevents.1703610179.MacBook-Pro.local.63920.0.v2
ml_server/: model_inference.cpp  server.cpp  server_internal.cpp
models/: sucker.keras
octopus_ai/: BUILD  __init__.py  config.py  config_schema.py  datagen.py  model.py  perf.py  util.py
python_toolchain/: BUILD  venv_interpreter.bzl
simulator/: .gitignore  AgentGenerator.py  BUILD  OctoDatagen.py  Octopus.py  RandomSurface.py  __init__.py  agent_generator.py  force_logger.py  frame_recorder.py  headless_runner.py  makefile  octo_datagen.py  octopus_generator.py  profiling.py  random_surface.py  run_store.py  sim_recorder.py  simutil.py  spring_chain.py  surface_generator.py
simulator/ilqr/: BUILD  arm.py  costs.py  ilqr.py  nodemesh.py  residuals.py  solver.py  solver_parallel.py
tests/: BUILD  README.md  conftest.py  helpers.py  test_agent_movement.py  test_analyzer_core.py  test_body_rotation.py  test_config_isolation.py  test_config_provenance.py  test_config_schema.py  test_exploration.py  test_force_logger.py  test_frame_recorder.py  test_headless_runner.py  test_helpers.py  test_ilqr.py  test_ilqr_parallel.py  test_inference_server.py  test_integration.py  test_kinematics.py  test_limb_adjacency.py  test_octopus_generator.py  test_perf.py  test_prey_capture.py  test_profiling.py  test_propulsion.py  test_record_playback.py  test_sim_recorder.py  test_simulator.py  test_spring_chain.py  test_trainers.py  test_training_losses.py  test_utilities.py  test_websocket_protocol.py
training/: .gitignore  BUILD  __init__.py  data_utils.py  limb.py  losses.py  sucker.py  train.py  trainutil.py
training/datagen/: data_loader.py
training/models/: base_loader.py  model_loader.py  sucker.keras has pretty good results
visualizer/: BUILD  analyzer.html  octo_viz.py  octopus-ai-visualizer.tsx  octopus-visualizer.html  websocket_server.py
